Layout updates * added latest font awesome

--- a/index.html
+++ b/index.html
@@ -122,39 +122,39 @@ style="">
                 <div class="row features view-code ng-scope">
                     <div class="col-md-4 col-sm-6 col-lg-3">
                         <aside>
-                            <h1>Lorem ipsum dolor!</h1>
-                        </aside>
+                            <h1><i class="fa fa-graduation-cap"></i> Students</h1>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, unde!
                         </p>
+                        </aside>
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3">
                         <aside>
-                            <h1>Lorem ipsum dolor!</h1>
-                        </aside>
+                            <h1><i class="fa fa-university"></i> Educators</h1>
                         <p>
                             Illo libero obcaecati quisquam ratione repudiandae, sed veritatis vero voluptatem?
                         </p>
-
-                    </div>
-                    <div class="col-md-4 col-sm-6 col-lg-3">
-                        <aside>
-                            <h1>Lorem ipsum dolor.</h1>
-                            <p>
-                                Dicta dignissimos, dolor eius id maxime necessitatibus nesciunt tempore velit?
-                            </p>
                         </aside>
-
                     </div>
                     <div class="col-md-4 col-sm-6 col-lg-3">
                         <aside>
-                            <h1>Lorem ipsum dolor.</h1>
+                            <h1><i class="fa fa-users"></i> Veterans.</h1>
                             <p>
                                 Eos exercitationem id inventore ipsa necessitatibus nesciunt perspiciatis quam repudiandae!
                             </p>
                         </aside>
 
                     </div>
+                    <div class="col-md-4 col-sm-6 col-lg-3">
+                        <aside>
+                            <h1><i class="fa fa-cubes"></i> Manufactuers</h1>
+                            <p>
+                                Dicta dignissimos, dolor eius id maxime necessitatibus nesciunt tempore velit?
+                            </p>
+                        </aside>
+
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -177,11 +177,6 @@ style="">
                             <p>Delectus facere fugit in ipsum laboriosam natus officiis perspiciatis quam sint soluta? Distinctio dolores earum ex magni necessitatibus obcaecati officiis omnis porro repudiandae! Adipisci asperiores autem culpa deserunt dignissimos
                                 distinctio dolor eos et fuga labore, nisi non nulla optio quam quisquam quod soluta. Assumenda delectus ea enim, iste itaque molestias, odit perspiciatis quod ratione reiciendis similique, sit veniam vitae voluptates.
                             </p>
-
-
-
-
-
                             <aside class="author">
                                 <div class="row">
                                     <div class="col-sm-2 col-md-1">
