--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ style="">
                                 <img src="http://lorempixel.com/output/business-q-c-300-200-5.jpg" alt="">
                             </figure>
                             <h1 class="cover">What we do.</h1>
-                            <p class="lead">The Manufacturing Academy of Hillsborough County is a workforce development and pre-employment training and recruitment program designed by local employers and educators to prepare participants for high-wage, highdemand manufacturing
+                            <p class="">The Manufacturing Academy of Hillsborough County is a workforce development and pre-employment training and recruitment program designed by local employers and educators to prepare participants for high-wage, highdemand manufacturing
                                 careers. Employers hire directly from the talent pool for open positions.
                             </p>
 
@@ -436,15 +436,16 @@ style="">
                 <!-- ngInclude: c.footer_copy -->
                 <!-- ngInclude: c.footer_copy -->
                 <!-- ngInclude: c.footer_copy -->
-                <div ng-include="c.footer_copy" class="ng-scope">
+                <div class="ng-scope">
                     <div class="row copy-info ng-scope">
                         <div class="col-md-12">
 
-                            <p class="">
-                                <img src="img/mahc-logo-brand.png"> © SG.Kit 2013
-                               <span class="pull-right ng-scope" ng-include="e.social"></span>
+                            <p class="text-center">
+                                <img src="img/mahc-logo-brand.png">
+
                             </p>
-                            <ul class="social list-inline ng-scope">
+                            <p class="text-center">
+                            <ul class="social list-inline text-center">
                                 <li><i class="fa fa-twitter-square"></i>
                                 </li>
                                 <li><i class="fa fa-facebook-square"></i>
@@ -454,8 +455,8 @@ style="">
                                 <li><i class="fa fa-rss-square"></i>
                                 </li>
                             </ul>
-                            <p></p>
-
+                          </p>
+  <p class="text-center">&copy; Allrights reserved </p>
                         </div>
                     </div>
                 </div>
