--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app="sgApp.controllers" class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths ng-scope js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"
+<html data-ng-app="sgApp.controllers" class="js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths ng-scope js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions no-fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"
 style="">
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -11,6 +11,12 @@ style="">
 <!--<![endif]-->
 
 <head>
+    <style type="text/css">
+        @charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide{display:none !important;}ng\:form{display:block;}.ng-animate-block-transitions{transition:0s all!important;-webkit-transition:0s all!important;}
+    </style>
+    <style type="text/css">
+        @charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide{display:none !important;}ng\:form{display:block;}.ng-animate-block-transitions{transition:0s all!important;-webkit-transition:0s all!important;}
+    </style>
     <style type="text/css">
         @charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide{display:none !important;}ng\:form{display:block;}.ng-animate-block-transitions{transition:0s all!important;-webkit-transition:0s all!important;}
     </style>
@@ -57,6 +63,8 @@ style="">
     <script src="//www.google-analytics.com/ga.js"></script>
     <script src="//www.google-analytics.com/ga.js"></script>
     <script src="//www.google-analytics.com/ga.js"></script>
+    <script src="//www.google-analytics.com/ga.js"></script>
+    <script src="//www.google-analytics.com/ga.js"></script>
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 
@@ -81,7 +89,7 @@ style="">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="../index.html">MACHO.ORG</a>
+                        <a class="navbar-brand visible-md" href="../index.html">MACHO.ORG</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
@@ -265,7 +273,7 @@ style="">
                                 <img src="http://lorempixel.com/output/business-q-c-300-200-5.jpg" alt="">
                             </figure>
                             <h1 class="cover">What we do.</h1>
-                            <p class="">The Manufacturing Academy of Hillsborough County is a workforce development and pre-employment training and recruitment program designed by local employers and educators to prepare participants for high-wage, highdemand manufacturing
+                            <p>The Manufacturing Academy of Hillsborough County is a workforce development and pre-employment training and recruitment program designed by local employers and educators to prepare participants for high-wage, highdemand manufacturing
                                 careers. Employers hire directly from the talent pool for open positions.
                             </p>
 
@@ -438,26 +446,52 @@ style="">
                 <!-- ngInclude: c.footer_copy -->
                 <div class="ng-scope">
                     <div class="row copy-info ng-scope">
-                        <div class="col-md-12">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="sg vtable">
+                                <div class="table-cell">
+                                    <p>
+                                        <img src="img/macho-logo.png">
 
-                            <p class="text-center">
-                                <img src="img/mahc-logo-brand.png">
+                                    </p>
+                                </div>
+                            </div>
 
-                            </p>
-                            <p class="text-center">
-                            <ul class="social list-inline text-center">
-                                <li><i class="fa fa-twitter-square"></i>
-                                </li>
-                                <li><i class="fa fa-facebook-square"></i>
-                                </li>
-                                <li><i class="fa fa-google-plus-square"></i>
-                                </li>
-                                <li><i class="fa fa-rss-square"></i>
-                                </li>
-                            </ul>
-                          </p>
-  <p class="text-center">&copy; Allrights reserved </p>
+
+
                         </div>
+                        <div class="col-md-6 visible-md visible-lg">
+                            <h1>Lorem ipsum dolor sit amet</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi autem beatae consectetur delectus dolores eos excepturi expedita explicabo facere iure laudantium maxime mollitia nulla pariatur quidem ratione recusandae
+                                rem repellat repudiandae sequi, sit velit veritatis voluptatem voluptatum? Consectetur ea facere illum in molestiae nam nisi porro provident quaerat ratione rerum sed suscipit, totam velit vitae. Ad excepturi tempore voluptatum.</p>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="sg">
+                                <div class="table-cell">
+
+
+                                    <aside>
+                                        <h1>Follow Us</h1>
+
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque culpa eius expedita nihil nulla.</p>
+                                    </aside>
+                                    <ul class="social list-inline">
+                                        <li><i class="fa fa-twitter-square"></i>
+                                        </li>
+                                        <li><i class="fa fa-facebook-square"></i>
+                                        </li>
+                                        <li><i class="fa fa-google-plus-square"></i>
+                                        </li>
+                                        <!--<li><i class="fa fa-rss-square"></i>-->
+
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p class="text-center">© Allrights reserved</p>
                     </div>
                 </div>
                 <!--<div ng-include="c.footer_copy"></div>-->
@@ -508,6 +542,10 @@ style="">
             s.parentNode.insertBefore(g, s)
         }(document, 'script'));
     </script>
+
+
+
+
 
 
 
