--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ style="">
                     <i class="fa fa-cog"></i><br>
                 Hillsborough Manufacturing
                 </h1>
-                                <p class="lead ng-binding">A Feature Packed Style Guide Toolkit!</p>
+                                <p class="lead ng-binding sg text-shadow">A Feature Packed Style Guide Toolkit!</p>
                             </div>
                         </div>
                     </div>
