--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@ style="">
 
     <script src="//www.google-analytics.com/ga.js"></script>
     <script src="//www.google-analytics.com/ga.js"></script>
-    <script src="//www.google-analytics.com/ga.js"></script>
-    <script src="//www.google-analytics.com/ga.js"></script>
-    <script src="//www.google-analytics.com/ga.js"></script>
-    <script src="//www.google-analytics.com/ga.js"></script>
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 
@@ -100,7 +96,7 @@ style="">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Students <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a>
+                                    <li><a href="students.html">Student Center</a>
                                     </li>
                                     <li><a href="#">Another action</a>
                                     </li>
@@ -117,7 +113,7 @@ style="">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Educators <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a>
+                                    <li><a href="edu.html">Edu Center</a>
                                     </li>
                                     <li><a href="#">Another action</a>
                                     </li>
@@ -134,7 +130,7 @@ style="">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Veterans <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a>
+                                    <li><a href="veterans.html">Veterans Center</a>
                                     </li>
                                     <li><a href="#">Another action</a>
                                     </li>
@@ -149,9 +145,10 @@ style="">
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manufacturers <b
+                                        class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a>
+                                    <li><a href="manufactuers.htm">Manufactuers Hub</a>
                                     </li>
                                     <li><a href="#">Another action</a>
                                     </li>
@@ -168,7 +165,6 @@ style="">
                             <li><a href="../index.html">About</a>
                             </li>
                             <li><a href="../index.html">Contact</a>
-
 
 
                             </li>
@@ -546,21 +542,6 @@ style="">
             s.parentNode.insertBefore(g, s)
         }(document, 'script'));
     </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
